--- a/styles/main.css
+++ b/styles/main.css
@@ -121,3 +121,27 @@ input {
 input[type="number"] {
     padding: 10px;
 }
+
+.strong {
+    font-weight: 600;
+}
+
+.weak {
+    font-weight: 400;
+    color: #999;
+}
+
+.small {
+    font-size: smaller;
+}
+
+.center {
+    text-align: center;
+}
+
+.link {
+    background: transparent;
+    text-decoration: underline;
+    color: #2980b9;
+    border: none;
+}
