--- a/main.css
+++ b/main.css
@@ -51,6 +51,13 @@ button:focus {
     border: none;
 }
 
+.link {
+    background: transparent;
+    text-decoration: underline;
+    color: #2980b9;
+    border: none;
+}
+
 .rounded {
     border-radius: 5px;
 }
@@ -143,13 +150,6 @@ input[type="number"] {
     text-align: center;
 }
 
-.link {
-    background: transparent;
-    text-decoration: underline;
-    color: #2980b9;
-    border: none;
-}
-
 .list {
     list-style-type: none;
 }
@@ -172,4 +172,8 @@ input[type="number"] {
 
 .clearfix {
     overflow: hidden;
+}
+
+.wide {
+    width: 100%;
 }
