--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@
 
 body, html {
     font-family: 'Helvetica', sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 .padding-1 {
@@ -65,6 +67,13 @@ button:focus {
 .primary {
     background: #2980b9;
     color: #ffffff;
+    border: none;
+}
+
+.cancel {
+    background: #95a5a6;
+    color: #ffffff;
+    border: none;
 }
 
 .primary-outline {
@@ -94,6 +103,8 @@ button:focus {
 .wrapper {
     margin: 0 auto;
     max-width: 600px;
+    height: 100%;
+    background: #2c3e50;
 }
 
 .table {
@@ -123,6 +134,7 @@ button:focus {
 input {
     outline: none;
     border: none;
+    padding: 10px;
 }
 
 .input-bordered {
@@ -201,12 +213,16 @@ input[type="number"] {
     top: 0;
     left: 100%;
     width: 100%;
+    height: 100%;
     -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: left .2s;
+    -webkit-transition: left .3s;
+    background: #eee;
 }
 
 .module-region {
     -webkit-transition: transform .2s;
+    height: 100%;
+    background: #fff;
 }
 
 .modal-active .module-region {
